--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,11 +36,11 @@
       <h1 class="title"><a href="/">Lemcoff Group</a></h1>
       <nav>
         <ul>
-          <li><a href="/research.html">RESEARCH</a></li>
-          <li><a href="/publications.html">PUBLICATIONS</a></li>
-          <li><a href="/members.html">MEMBERS</a></li>
-          <li><a href="/community.html">COMMUNITY</a></li>
-          <li><a href="/links.html">LINKS</a></li>
+          <li><a href="/research/">RESEARCH</a></li>
+          <li><a href="/publications/">PUBLICATIONS</a></li>
+          <li><a href="/members/">MEMBERS</a></li>
+          <li><a href="/community/">COMMUNITY</a></li>
+          <li><a href="/links/">LINKS</a></li>
         </ul>
       </nav>
     </header>
