--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -38,7 +38,7 @@ textarea
 
 body
   background: main_background
-  background-image: url("/img/bg.png")
+  background-image: url("/static/img/bg.png")
   font: 1.2em/1.4 Merriweather, serif
 
 ::-moz-selection,
