Work-in-progress for page / file upload edit in admin; Admin authentication complete, except still using plaintext password (will add later) Removed database integration (mongodb, mongoengine) as it is not needed; Added .txt file view; Added humans.txt <link> in base.html Created 404 page; Updated .gitignore; Updated pip.txt;

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.min.css') }}"/>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
 
+  <link type="text/plain" rel="author" href="humans.txt" />
+
   {# <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png"> #}
   {#  {% assign reses = "144|120|114|72|57" | split: "|" %} {% comment %} TODO Add 120 image {% endcomment %} #}
   {# {% for res in reses %} #}
