moved pagedown-bootstrap to vendor/ dir, along with a copy of jquery; Admin is complete; also moved logout button to a new admin/master.html file which every admin template inheirts from.

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,13 +1,10 @@
 {% extends 'admin/master.html' %}
 
-{% block access_control %}
-{{ super() }}
-{% include 'admin/logout_button.html' %}
-{% endblock %}
-
 {% block body %}
 {{ super() }}
 {% if current_user.is_authenticated() %}
-<p>Please <a href="{{ url_for('admin.logout_view') }}">log out</a> first.</p>
+<div class="alert alert-info">
+  Please <strong><a href="{{ url_for('admin.logout_view') }}">log out</a></strong> first.
+</div>
 {% endif %}
 {% endblock %}
