--- a/app/templates/admin/master.html
+++ b/app/templates/admin/master.html
@@ -1,3 +1,8 @@
+{% extends 'admin/base.html' %}
+
+{% block access_control %}
+{{ super() }}
+
 {% if current_user.is_authenticated() %}
 <a href="{{ url_for('admin.logout_view') }}">
   <div class="btn pull-right">
@@ -5,3 +10,5 @@
   </div>
 </a>
 {% endif %}
+
+{% endblock %}
