--- a/app/templates/admin/page_edit.html
+++ b/app/templates/admin/page_edit.html
@@ -1,29 +1,36 @@
 {% extends 'admin/file/edit.html' %}
 
-{% block head %}
-    {{ super() }}
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
-
-    <link href="{{ url_for('static', filename='js/pagedown-bootstrap/css/jquery.pagedown-bootstrap.css') }}" rel="stylesheet">
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/pagedown-bootstrap/js/jquery.pagedown-bootstrap.combined.min.js') }}"></script>
-
-    <script type="text/javascript">
-    $(document).ready(function() {
-      $("textarea#content").pagedownBootstrap({
-        //'help': function () { alert("Do you need help?"); }
-      });
-    });
-    </script>
+{% block body %}
+<div class="alert alert-info alert-dismissable">
+  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <strong>Help:</strong> The left window is for editing the page's content, and the right one is the preview.<br />
+  You can post images and other uploaded files by pressing the 'link' or 'image' buttons (below) and pasting the image/file's link from the 'Files' page.<br />
+  <br />
+  Click the 'X' on the right to dismiss this window.
+</div>
+{{ super() }}
 {% endblock %}
 
 {% block tail_js %}
-{# We have to turn this off (and load them above), otherwise the markdown editor won't load. #}
-{# <script src="{{ url_for('admin.static', filename='vendor/jquery-1.8.3.min.js') }}" type="text/javascript"></script> #}
-{# <script src="{{ url_for('admin.static', filename='bootstrap/js/bootstrap.min.js') }}" type="text/javascript"></script> #}
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ url_for('static', filename='js/vendor/jquery-1.9.1.min.js') }}"><\/script>')</script>
+{# select2 is from original source. #}
 <script src="{{ url_for('admin.static', filename='select2/select2.min.js') }}" type="text/javascript"></script>
+<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/vendor/pagedown-bootstrap/js/jquery.pagedown-bootstrap.combined.min.js') }}"></script>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    $("textarea#content").pagedownBootstrap();
+  });
+</script>
+{% endblock %}
+
+{% block tail %}
+{# Using Flask-Admin bootstrap instead, for consistent feel. #}
+{# <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"> #}
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+
+<link href="{{ url_for('static', filename='js/vendor/pagedown-bootstrap/css/jquery.pagedown-bootstrap.css') }}" rel="stylesheet">
+<link href="{{ url_for('static', filename='css/page_edit.css') }}" rel="stylesheet">
 {% endblock %}
