--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,59 +1,52 @@
-html,button,input,select,textarea{color:#222}
-body{background:#fff;background-image:url("/static/img/bg.png");font:1.2em/1.4 Merriweather,serif}
-::-moz-selection,::selection{background:#a8f26a;text-shadow:none}
+html,button,input,select,textarea{color:#00041f}
+body{background:#fff;font:300 1.2em/1.4 'Open Sans',sans-serif}
+::-moz-selection,::-webkit-selection,::selection,background: selection-color{text-shadow:none}
 hr{border:0;border-top:1px solid #eee;display:block;height:1px;margin:1em 0;padding:0}
-img{vertical-align:middle}
+img{display:block;margin:0 auto;vertical-align:middle;max-width:100%}
+a{text-decoration:none;-webkit-transition:color .2s ease-out;-moz-transition:color .2s ease-out;-o-transition:color .2s ease-out;transition:color .2s ease-out;color:#7d86cc;}
+a:hover{color:#ffe99c}
 fieldset{border:0;margin:0;padding:0}
 textarea{resize:vertical}
-.highlight pre{border:1px solid #a9a9a9;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;padding:10px;font-size:.8em;line-height:1.5em}
-code{font-family:Monaco,DejaVu Sans Mono,Courier New,monospace}
-.chromeframe{background:#ccc;color:#000;margin:.2em 0;padding:.2em 0}
 .wrapper{margin:0 5%;width:90%}
-.header-container{font-family:Vollkorn,serif;font-weight:normal;}
-.header-container .wrapper{margin-top:1em}
-.header-container h1{margin:0}
-.header-container a{color:inherit;text-decoration:none;padding:12px 0;-webkit-transition:color .2s ease-out;-moz-transition:color .2s ease-out;-o-transition:color .2s ease-out;transition:color .2s ease-out;}
-.header-container a:hover{color:#a8f26a}
-#avatar{display:none}
-.main-container .wrapper{border-top:solid 1px #eee}
-.main-container h1{font-size:1.4em;line-height:1.86em;}
-.main-container h1:first-of-type{margin-top:0}
-.main-container h2{font-size:1.2em}
-.main-container h3{font-size:1em}
-.main-container a{color:#a9a9a9;text-decoration:none;-webkit-transition:color .2s ease-out;-moz-transition:color .2s ease-out;-o-transition:color .2s ease-out;transition:color .2s ease-out;}
-.main-container a:hover{color:#a8f26a}
-.main-container #blog a{color:inherit;}
-.main-container #blog a:hover{color:#a8f26a}
+.header-container{padding:2em 0 .4em 0;background:#9ca7ff}
+.nav-container{padding:.4em;background:#c8ceff}
+.header-container,.nav-container{font-family:'Merriweather',serif;font-weight:400;}
+.header-container a,.nav-container a{color:#00041f;padding:12px 0;}
+.header-container a:hover,.nav-container a:hover{color:#ffe99c}
+.main-container .wrapper{padding-top:2.5em}
+.main-container h1{font-size:1.7999999999999998em;line-height:1.4;font-weight:300}
+.main-container h2{font-size:1.32em;line-height:1.4;font-weight:300}
 .footer-container,.main aside{border-top:1px solid #eee;font-size:.6em;line-height:2em;}
 .footer-container a,.main aside a{color:inherit;text-decoration:none;-webkit-transition:color .2s ease-out;-moz-transition:color .2s ease-out;-o-transition:color .2s ease-out;transition:color .2s ease-out;}
-.footer-container a:hover,.main aside a:hover{color:#a8f26a}
-.title{margin-bottom:0}
+.footer-container a:hover,.main aside a:hover{color:#ffe99c}
 nav ul{margin:0;padding:0}
-nav li{margin-top:.32em}
-nav a{float:left;margin:0 1.7%;padding:15px 0;text-align:left}
+nav li{margin-top:.32em;}
+nav li:first-of-type{margin-left:0}
+nav a{padding:15px 0;text-align:left}
 .main{line-height:1.6em;padding:30px 0 100px 0;}
 .main aside{padding:0 5% 10px}
-ul{list-style:none;padding-left:0}
-li{margin-bottom:10px;}
-li:last-child{margin-bottom:0}
-li a{text-decoration:none}
-time{color:#a9a9a9;float:left;font-size:.8em;margin-right:1em;width:6.5em}
-#blog div{margin-left:6.5em}
-.footer-container footer{padding:0;}
-.footer-container footer .footer-left{float:left;width:33.33333%;text-align:left}
-.footer-container footer .footer-center{float:left;width:33.33333%}
-.footer-container footer .footer-right{float:left;width:33.33333%;text-align:right}
-nav ul li{display:inline}
+.main section{margin-bottom:30px}
+.main ul{padding-left:0}
+.main li{margin-bottom:10px;}
+.main li:last-child{margin-bottom:0}
+.main li a{text-decoration:none}
+footer{padding:0}
+.footer-left{display:none;color:#eee}
+.footer-center{float:left}
+.footer-right{float:right}
+.chromeframe{background:#ccc;color:#000;margin:.2em 0;padding:.2em 0}
 .oldie nav a{margin:0 .7%}
 .ie7 .title{padding-top:20px}
-@media only screen and (min-width: 500px){.title,nav ul li{float:left}
-nav{float:right;}
-nav li{margin-left:2em}
-nav a{margin:0}
-#avatar{display:block;float:right;margin:0 0 10px 10px}
-#research-interests{float:left}
-#contact{float:right}
+@media only screen and (min-width: 570px){nav li{margin:0 0 0 2em;float:left;}
+nav li:first-of-type{margin-left:0}
+nav li a{margin:0;font-size:2.5vw}
 }@media only screen and (min-width: 750px){.wrapper{margin:0 auto;width:700px}
+nav li a{font-size:1em}
+.footer-left,.footer-center,.footer-right{float:left;width:33.33333%}
+.footer-left{display:inline;text-align:left}
+.footer-center{text-align:center}
+.footer-right{text-align:right}
+}@media only screen and (min-width: 990px){.wrapper{width:960px}
 }.ir{background-color:transparent;border:0;overflow:hidden;*text-indent:-9999px}
 .ir:before{content:"";display:block;width:0;height:150%}
 .hidden{display:none !important;visibility:hidden}
