--- a/app/stylus/index.styl
+++ b/app/stylus/index.styl
@@ -10,11 +10,15 @@
 .main ul
   list-style-type: none
 
-#contact a
-  color: main-color
+#contact
+  h1
+    margin-top: 0
 
-  &:hover
-    color: a-hover-color
+  a
+    color: main-color
+
+    &:hover
+      color: a-hover-color
 
 #logo
   display: none
@@ -33,7 +37,7 @@
     margin-bottom: 170px
 
   #research-interests
-    margin-top: -130px
+    margin-top: -23px
     float: left
 
   #contact
