--- a/app/templates/admin/page_edit.html
+++ b/app/templates/admin/page_edit.html
@@ -17,11 +17,11 @@
 {% endblock %}
 
 {% block tail_js %}
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ url_for('static', filename='js/vendor/jquery-1.9.1.min.js') }}"><\/script>')</script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript">window.jQuery || document.write('<script src="{{ url_for('static', filename='js/vendor/jquery-1.9.1.min.js') }}"><\/script>')</script>
 {# select2 is from original source. #}
 <script src="{{ url_for('admin.static', filename='select2/select2.min.js') }}" type="text/javascript"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/vendor/pagedown-bootstrap/js/jquery.pagedown-bootstrap.combined.min.js') }}"></script>
 
 <script type="text/javascript">
