--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -41,6 +41,7 @@
         <li><a href="/research/">Research</a></li>
         <li><a href="/publications/">Publications</a></li>
         <li><a href="/members/">Members</a></li>
+        <li><a href="/alumni/">Alumni</a></li>
         <li><a href="/community/">Community</a></li>
         <li><a href="/links/">Links</a></li>
       </ul>
