--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,19 +19,7 @@
 
 <section id="research-interests">
   <header><h1>Research Interests</h1></header>
-  <p>
-    <ul>
-      <li>Dendrimer and Polymer Chemistry</li>
-      <li>Synthetic Organic Chemistry</li>
-      <li>Supramolecular Chemistry</li>
-      <li>Organometallic Chemistry</li>
-      <li>Olefin Metathesis</li>
-      <li>Intramolecular Cross-linking</li>
-      <li>Acetal Chemistry</li>
-      <li>Dynamic Combinatorial Libraries</li>
-      <li>Molecular Modeling</li>
-    </ul>
-  </p>
+    {{ page.html|safe }}
 </section>
 
 <section id="contact">
