App is ready for deployment; Created password.txt and config.py files (need to be edited upon deploying); Edited help window in page_edit.html; Set debug to False

--- a/app/templates/admin/page_edit.html
+++ b/app/templates/admin/page_edit.html
@@ -9,7 +9,10 @@
 <div class="alert alert-info alert-dismissable">
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   <strong>Help:</strong> The left window is for editing the page's content, and the right one is the preview.<br />
-  You can post images and other uploaded files by pressing the 'link' or 'image' buttons (below) and pasting the image/file's link from the 'Files' page.<br />
+  The special signs and characters in the left window will translate to a designed page in the right window.<br />
+  You can post images and other uploaded files by pressing the 'link' or 'image' buttons and pasting the image/file's link from the 'Files' page (above).<br />
+  <br />
+  The text on the left window is formatted using <i>Markdown</i> format. <strong><a href="https://daringfireball.net/projects/markdown/basics">Click here for more information</a></strong>.<br />
   <br />
   Click the 'X' on the right to dismiss this window.
 </div>
