--- a/app/stylus/import/variables.styl
+++ b/app/stylus/import/variables.styl
@@ -1,7 +1,9 @@
 main-color = #00041F
 bg = white
-primary-header-bg = #9CA7FF
-secondary-header-bg = #C8CEFF
+// primary-header-bg = #9CA7FF
+// secondary-header-bg = #C8CEFF
+primary-header-bg = #D53323
+secondary-header-bg = #DC6C61
 
 a-color = #7D86CC
 a-hover-color = #FFE99C
