--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -57,6 +57,9 @@ textarea
   padding: 2em 0 0.4em 0
   background: primary-header-bg
 
+  #logo
+    display: none
+
 .nav-container
   padding: 0.4em
   background: secondary-header-bg
