--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -3,11 +3,8 @@
 #contact h1{margin-top:0}
 #contact a{color:#00041f;}
 #contact a:hover{color:#ffe99c}
-#logo{display:none}
 @media only screen and (min-width: 750px){#avatar{float:right;width:40vw}
-}@media only screen and (min-width: 990px){#about{margin-bottom:170px}
-#research-interests{margin-top:-23px;float:left}
-#contact{float:right;}
-#contact #contact-details{float:left;margin-right:112px}
-#logo{display:inline;float:right}
+}@media only screen and (min-width: 990px){#research-interests{margin-top:-23px;float:left}
+#contact{float:left;}
+#contact #contact-details{margin-right:112px}
 }
