--- a/app/stylus/import/screen.styl
+++ b/app/stylus/import/screen.styl
@@ -12,6 +12,17 @@
       font-size: 2.5vw
 
 
+  .header-container
+    padding: 5em 0 0.4em 0
+
+    #logo
+      display: block
+      float: right
+      margin: -150px 30px 0 0
+
+
+
+
 @media only screen and (min-width: 750px)
 
   .wrapper
