--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,6 +33,9 @@
     <header class="clearfix">
       <h1 class="title wrapper"><a href="/">Lemcoff Group</a></h1>
     </header>
+    <a id="logo" href="http://www.bgu.ac.il/teva/chem/">
+      <img src="{{ url_for('static', filename='img/bgu_logo.png') }}" alt="Photo of Prof. Gabriel Lemcoff" width="91" height="133">
+    </a>
   </div>
 
   <div class="nav-container">
@@ -42,7 +45,7 @@
         <li><a href="/publications/">Publications</a></li>
         <li><a href="/members/">Members</a></li>
         <li><a href="/alumni/">Alumni</a></li>
-        <li><a href="/community/">Community</a></li>
+        <li><a href="/photos/">Photos</a></li>
         <li><a href="/links/">Links</a></li>
       </ul>
     </nav>
