--- a/app/static/css/page.css
+++ b/app/static/css/page.css
@@ -1,2 +1,1 @@
-.main-container .wrapper{padding-top:0}
-.main-container h1,.main-container h2{margin-top:1.5em}
+.main-container .wrapper{padding-top:0}.main-container h1,.main-container h2{margin-top:1.5em}
