--- a/app/static/css/publications.css
+++ b/app/static/css/publications.css
@@ -1,2 +1,1 @@
-.main-container .wrapper a{color:#00041f;}
-.main-container .wrapper a:hover{color:#ffe99c}
+.main-container .wrapper a{color:#00041f;}.main-container .wrapper a:hover{color:#ffe99c}
