--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,10 +1,1 @@
-#avatar{display:block;margin:0 auto 50px auto;height:auto;width:60vw;max-width:411px}
-.main ul{list-style-type:none}
-#contact h1{margin-top:0}
-#contact a{color:#00041f;}
-#contact a:hover{color:#ffe99c}
-@media only screen and (min-width: 750px){#avatar{float:right;width:40vw}
-}@media only screen and (min-width: 990px){#research-interests{margin-top:-23px;float:left}
-#contact{float:left;}
-#contact #contact-details{margin-right:112px}
-}
+#avatar{display:block;margin:0 auto 50px auto;height:auto;width:60vw;max-width:411px}.main ul{list-style-type:none}#contact h1{margin-top:0}#contact a{color:#00041f;}#contact a:hover{color:#ffe99c}@media only screen and (min-width: 750px){#avatar{float:right;width:40vw}}@media only screen and (min-width: 990px){#research-interests{margin-top:-23px;float:left}#contact{float:left;}#contact #contact-details{margin-right:112px}}
