--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,74 +1,1 @@
-html,button,input,select,textarea{color:#00041f}
-body{background:#fff;font:300 1.2em/1.4 'Open Sans',sans-serif}
-::-moz-selection,::-webkit-selection,::selection,background: selection-color{text-shadow:none}
-hr{border:0;border-top:1px solid #eee;display:block;height:1px;margin:1em 0;padding:0}
-img{display:block;margin:0 auto;vertical-align:middle;max-width:100%}
-a{text-decoration:none;-webkit-transition:color .2s ease-out;-moz-transition:color .2s ease-out;-o-transition:color .2s ease-out;transition:color .2s ease-out;color:#7d86cc;}
-a:hover{color:#ffe99c}
-fieldset{border:0;margin:0;padding:0}
-textarea{resize:vertical}
-.wrapper{margin:0 5%;width:90%}
-.header-container{padding:2em 0 .4em 0;background:#d53323;}
-.header-container #logo{display:none}
-.nav-container{padding:.4em;background:#dc6c61}
-.header-container,.nav-container{font-family:'Merriweather',serif;font-weight:400;}
-.header-container a,.nav-container a{color:#00041f;padding:12px 0;}
-.header-container a:hover,.nav-container a:hover{color:#ffe99c}
-.main-container .wrapper{padding-top:2.5em}
-.main-container h1{font-size:1.7999999999999998em;line-height:1.4;font-weight:300}
-.main-container h2{font-size:1.32em;line-height:1.4;font-weight:300}
-.footer-container,.main aside{border-top:1px solid #eee;font-size:.6em;line-height:2em;}
-.footer-container a,.main aside a{color:inherit;text-decoration:none;-webkit-transition:color .2s ease-out;-moz-transition:color .2s ease-out;-o-transition:color .2s ease-out;transition:color .2s ease-out;}
-.footer-container a:hover,.main aside a:hover{color:#ffe99c}
-nav ul{margin:0;padding:0}
-nav li{margin-top:.32em;}
-nav li:first-of-type{margin-left:0}
-nav a{padding:15px 0;text-align:left}
-.main{line-height:1.6em;padding:30px 0 100px 0;}
-.main aside{padding:0 5% 10px}
-.main section{margin-bottom:30px}
-.main ul{padding-left:0}
-.main li{margin-bottom:10px;}
-.main li:last-child{margin-bottom:0}
-.main li a{text-decoration:none}
-footer{padding:0}
-.footer-left{display:none;color:#eee}
-.footer-center{float:left}
-.footer-right{float:right}
-.chromeframe{background:#ccc;color:#000;margin:.2em 0;padding:.2em 0}
-.oldie nav a{margin:0 .7%}
-.ie7 .title{padding-top:20px}
-@media only screen and (min-width: 570px){nav li{margin:0 0 0 2em;float:left;}
-nav li:first-of-type{margin-left:0}
-nav li a{margin:0;font-size:2.5vw}
-.header-container{padding:5em 0 .4em 0;}
-.header-container #logo{display:block;float:right;margin:-150px 30px 0 0}
-}@media only screen and (min-width: 750px){.wrapper{margin:0 auto;width:700px}
-nav li a{font-size:1em}
-.footer-left,.footer-center,.footer-right{float:left;width:33.33333%}
-.footer-left{display:inline;text-align:left}
-.footer-center{text-align:center}
-.footer-right{text-align:right}
-}@media only screen and (min-width: 990px){.wrapper{width:960px}
-}.ir{background-color:transparent;border:0;overflow:hidden;*text-indent:-9999px}
-.ir:before{content:"";display:block;width:0;height:150%}
-.hidden{display:none !important;visibility:hidden}
-.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}
-.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}
-.invisible{visibility:hidden}
-.clearfix:before,.clearfix:after{content:" ";display:table}
-.clearfix:after{clear:both}
-.clearfix{*zoom:1}
-@media print{*{background:transparent !important;color:#000 !important;box-shadow:none !important;text-shadow:none !important}
-a,a:visited{text-decoration:underline}
-a[href]:after{content:" (" attr(href) ")"}
-abbr[title]:after{content:" (" attr(title) ")"}
-.ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after{content:""}
-pre,blockquote{border:1px solid #999;page-break-inside:avoid}
-thead{display:table-header-group}
-tr,img{page-break-inside:avoid}
-img{max-width:100% !important}
-@page{margin:.5cm}
-p,h2,h3{orphans:3;widows:3}
-h2,h3{page-break-after:avoid}
-}
+html,button,input,select,textarea{color:#00041f}body{background:#fff;font:300 1.2em/1.4 'Open Sans',sans-serif}::-moz-selection,::-webkit-selection,::selection,background: selection-color{text-shadow:none}hr{border:0;border-top:1px solid #eee;display:block;height:1px;margin:1em 0;padding:0}img{display:block;margin:0 auto;vertical-align:middle;max-width:100%}a{text-decoration:none;-webkit-transition:color .2s ease-out;-moz-transition:color .2s ease-out;-o-transition:color .2s ease-out;transition:color .2s ease-out;color:#7d86cc;}a:hover{color:#ffe99c}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.wrapper{margin:0 5%;width:90%}.header-container{padding:2em 0 .4em 0;background:#d53323;}.header-container #logo{display:none}.nav-container{padding:.4em;background:#dc6c61}.header-container,.nav-container{font-family:'Merriweather',serif;font-weight:400;}.header-container a,.nav-container a{color:#00041f;padding:12px 0;}.header-container a:hover,.nav-container a:hover{color:#ffe99c}.main-container .wrapper{padding-top:2.5em}.main-container h1{font-size:1.7999999999999998em;line-height:1.4;font-weight:300}.main-container h2{font-size:1.32em;line-height:1.4;font-weight:300}.footer-container,.main aside{border-top:1px solid #eee;font-size:.6em;line-height:2em;}.footer-container a,.main aside a{color:inherit;text-decoration:none;-webkit-transition:color .2s ease-out;-moz-transition:color .2s ease-out;-o-transition:color .2s ease-out;transition:color .2s ease-out;}.footer-container a:hover,.main aside a:hover{color:#ffe99c}nav ul{margin:0;padding:0}nav li{margin-top:.32em;}nav li:first-of-type{margin-left:0}nav a{padding:15px 0;text-align:left}.main{line-height:1.6em;padding:30px 0 100px 0;}.main aside{padding:0 5% 10px}.main section{margin-bottom:30px}.main ul{padding-left:0}.main li{margin-bottom:10px;}.main li:last-child{margin-bottom:0}.main li a{text-decoration:none}footer{padding:0}.footer-left{display:none;color:#eee}.footer-center{float:left}.footer-right{float:right}.chromeframe{background:#ccc;color:#000;margin:.2em 0;padding:.2em 0}.oldie nav a{margin:0 .7%}.ie7 .title{padding-top:20px}@media only screen and (min-width: 570px){nav li{margin:0 0 0 2em;float:left;}nav li:first-of-type{margin-left:0}nav li a{margin:0;font-size:2.5vw}.header-container{padding:5em 0 .4em 0;}.header-container #logo{display:block;float:right;margin:-150px 30px 0 0}}@media only screen and (min-width: 750px){.wrapper{margin:0 auto;width:700px}nav li a{font-size:1em}.footer-left,.footer-center,.footer-right{float:left;width:33.33333%}.footer-left{display:inline;text-align:left}.footer-center{text-align:center}.footer-right{text-align:right}}@media only screen and (min-width: 990px){.wrapper{width:960px}}.ir{background-color:transparent;border:0;overflow:hidden;*text-indent:-9999px}.ir:before{content:"";display:block;width:0;height:150%}.hidden{display:none !important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix:before,.clearfix:after{content:" ";display:table}.clearfix:after{clear:both}.clearfix{*zoom:1}@media print{*{background:transparent !important;color:#000 !important;box-shadow:none !important;text-shadow:none !important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}.ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100% !important}@page{margin:.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
